Add a bunch of stubs and packages for asteroid

--- a/FlaPyDisaster/templates/HomePage.html
+++ b/FlaPyDisaster/templates/HomePage.html
@@ -3,13 +3,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Home Page</title>
+    <title>Home</title>
 </head>
 <body>
     <div>
         <ul>
             <li><a href="{{ url_for('hurricane_page') }}">Hurricane</a></li>
-            <li><h2>Link to asteroid</h2></li>
+            <li><a href="{{ url_for('asteroid_page') }}">Asteroid</a></li>
         </ul>
     </div>
 </body>
