wired up return period and energy to results, some bug fixes and rearranging, added energy to unit conversions

--- a/FlaPyDisaster/templates/asteroid.html
+++ b/FlaPyDisaster/templates/asteroid.html
@@ -12,8 +12,8 @@
             <p>Diameter (m)</p>
             <input type="text" name="diameter" />
             <select name="diameter_unit">
-                <option value="meter">Meters</option>
-                <option value="feet">Feet</option>
+                <option value="m">Meters</option>
+                <option value="ft">Feet</option>
             </select>
         </div>
         <div>
