Added residual velocity and post explosion equations

--- a/FlaPyDisaster/templates/asteroid.html
+++ b/FlaPyDisaster/templates/asteroid.html
@@ -47,7 +47,7 @@
     <br />
     <form name="function_form" method="post" action="{{ url_for('asteroid_function_form') }}">
         <div>
-            <button type="submit">Run Function!</button>
+            <button type="submit">Test Function!</button>
         </div>
     </form>
 </body>
