--- a/FlaPyDisaster/templates/asteroid_results.html
+++ b/FlaPyDisaster/templates/asteroid_results.html
@@ -16,6 +16,8 @@
     <p>Airburst Altitude: {{ t_airburst_alt_m }}</p>
     <p>Event Kenetic Energy: {{ t_energy_MtTnt }}</p>
     <p>Return period: {{ t_retperiod_yr }}</p>
+    <p>Residual Velocity: {{ t_airburst_velocity_mps }}</p>
+    <p>Airburst energy: {{ t_airburst_energy_MtTnt }}</p>
     <br />
     <div>
         <a href="{{ url_for('asteroid_page') }}">Back to input</a>
