added start of over pressure using Newmark-Hansen Overpressure formula

--- a/FlaPyDisaster/templates/asteroid.html
+++ b/FlaPyDisaster/templates/asteroid.html
@@ -41,6 +41,15 @@
             <p>Target Density (kg/m3)</p>
             <input type="text" name="target_density_kgm3" />
         </div>
+        <div>
+            <p>Distance from event</p>
+            <input type="text" name="radius_obs" />
+            <select name="radius_obs_unit">
+                <option value="km">Kilometer</option>
+                <option value="m">Meters</option>
+                <option value="ft">Feet</option>
+            </select>
+        </div>
         <br />
         <button type="submit">Submit Input Parameters</button>
     </form>
