--- a/FlaPyDisaster/templates/asteroid_results.html
+++ b/FlaPyDisaster/templates/asteroid_results.html
@@ -18,6 +18,7 @@
     <p>Return period: {{ t_retperiod_yr }}</p>
     <p>Residual Velocity: {{ t_airburst_velocity_mps }}</p>
     <p>Airburst energy: {{ t_airburst_energy_MtTnt }}</p>
+    <p>Overpressure at {{ t_radius_obs }}: {{ t_overpressure_obs_bar }}</p>
     <br />
     <div>
         <a href="{{ url_for('asteroid_page') }}">Back to input</a>
