--- a/FlaPyDisaster/templates/HomePage.html
+++ b/FlaPyDisaster/templates/HomePage.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <script src="../static/scripts/hello.js"></script>
     <title>Home</title>
 </head>
 <body>
@@ -11,6 +12,9 @@
             <li><a href="{{ url_for('hurricane_page') }}">Hurricane</a></li>
             <li><a href="{{ url_for('asteroid_page') }}">Asteroid</a></li>
         </ul>
+    </div>
+    <div>
+        <input type="button" onclick="HelloWorld()" value="Javascript Hello!" />
     </div>
 </body>
 </html>
