adding a set of jquery support

--- a/FlaPyDisaster/templates/HomePage.html
+++ b/FlaPyDisaster/templates/HomePage.html
@@ -16,5 +16,10 @@
     <div>
         <input type="button" onclick="HelloWorld()" value="Javascript Hello!" />
     </div>
+    <br />
+    <div>
+        <h2>Test Links</h2>
+        <a href="{{ url_for('asteroid_result_test') }}">asteroid result test</a>
+    </div>
 </body>
 </html>
