small cleanup and commenting

--- a/FlaPyDisaster/templates/asteroid_results.html
+++ b/FlaPyDisaster/templates/asteroid_results.html
@@ -31,6 +31,7 @@
     </div>
     <br />
     <div>
+        <h4>JQuery Testing</h4>
         <p id="sel_text">Text here</p>
         <select id="sel_sel" name="sel_test" onchange="unit_conversion('sel_sel', 'sel_text')">
             <option value="km">Kilometer</option>
