added input to javascript hello world

--- a/FlaPyDisaster/templates/HomePage.html
+++ b/FlaPyDisaster/templates/HomePage.html
@@ -14,7 +14,7 @@
         </ul>
     </div>
     <div>
-        <input type="button" onclick="HelloWorld()" value="Javascript Hello!" />
+        <input type="button" onclick="HelloWorld('my_input')" value="Javascript Hello!" />
     </div>
 </body>
 </html>
