just, large commit.  see diff i guess.

--- a/FlaPyDisaster/templates/asteroid_results.html
+++ b/FlaPyDisaster/templates/asteroid_results.html
@@ -16,7 +16,7 @@
     <p>Diameter: {{ t_diameter_m }}</p>
     <p>Angle: {{ t_angle_deg }}</p>
     <p>Velocity: {{ t_velocity_kms }}</p>
-    <p>Density:  {{ t_density_kgm3 }}</p>
+    <p>Density:  {{ t_density_kgpm3 }}</p>
     <h2>Results</h2>
     <p>Breakup Altitude: {{ t_breakup_alt_m }}</p>
     <p>Airburst Altitude: {{ t_airburst_alt_m }}</p>
