major changes learning and working out how to incorperate javascript and jquery

--- a/FlaPyDisaster/templates/leaflet_test.html
+++ b/FlaPyDisaster/templates/leaflet_test.html
@@ -6,10 +6,17 @@
     <title>Leaflet Test</title>
     <link rel="stylesheet" href="../static/leaflet/leaflet.css" />
     <script type=text/javascript src="../static/leaflet/leaflet.js"></script>
-    <script type=text/javascript src="../static/scripts/leaflet_test.js"></script>
+    <script type=text/javascript src="{{ url_for('leaflet_test_js') }}"></script>
+    <script type=text/javascript src="../static/JQuery/jquery-3.0.0.js"></script>
+    <script type=text/javascript>
+        var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
 </head>
 <body onload="leaflet_init()">
     <h1>Leaflet Test</h1>
+    <div id="controls">
+        <button type="button" onclick="place_last_marker_test()">Add maker at last point</button>
+    </div>
     <div id="mapid" style="height: 500px"></div>
 </body>
 </html>
