--- a/FlaPyDisaster/templates/leaflet_test.html
+++ b/FlaPyDisaster/templates/leaflet_test.html
@@ -16,6 +16,8 @@
     <h1>Leaflet Test</h1>
     <div id="controls">
         <button type="button" onclick="place_last_marker_test()">Add maker at last point</button>
+        <br />
+        <button type="button" onclick="clear_map()">Clear map</button>
     </div>
     <div id="mapid" style="height: 500px"></div>
 </body>
