--- a/FlaPyDisaster/templates/leaflet_test.html
+++ b/FlaPyDisaster/templates/leaflet_test.html
@@ -18,6 +18,8 @@
         <button type="button" onclick="place_last_marker_test()">Add maker at last point</button>
         <br />
         <button type="button" onclick="clear_markers()">Clear map</button>
+        <br />
+        <input type="checkbox" name="add_marker" id="add_marker" onclick="alert_state()"/><label for="add_marker">Add Marker</label>
     </div>
     <div id="mapid" style="height: 500px"></div>
 </body>
