--- a/FlaPyDisaster/templates/leaflet_test.html
+++ b/FlaPyDisaster/templates/leaflet_test.html
@@ -20,6 +20,8 @@
         <button type="button" onclick="clear_markers()">Clear map</button>
         <br />
         <input type="checkbox" name="add_marker" id="add_marker" onclick="alert_state()"/><label for="add_marker">Add Marker</label>
+        <br />
+        <button type="button" onclick="geojson_test()">GeoJson Test</button>
     </div>
     <div id="mapid" style="height: 500px"></div>
 </body>
