got asteroid grid to print to map, need to make lat/long correct

--- a/FlaPyDisaster/templates/asteroid_results.html
+++ b/FlaPyDisaster/templates/asteroid_results.html
@@ -39,6 +39,9 @@
             <option value="ft">Feet</option>
         </select>
     </div>
+    <div>
+        <a href="{{ url_for('leaflet_redirect') }}">To Map</a>
+    </div>
     
 </body>
 </html>
