--- a/FlaPyDisaster/templates/leaflet_test.html
+++ b/FlaPyDisaster/templates/leaflet_test.html
@@ -23,6 +23,7 @@
         <br />
         <button type="button" onclick="geojson_test()">GeoJson Test</button>
         <button type="button" onclick="geojson_points_test()">GeoJson Points Test</button>
+        <button type="button" onclick="geojson_asteroid_points_test()">Asteroid Test</button>
     </div>
     <div id="mapid" style="height: 500px"></div>
 </body>
