--- a/FlaPyDisaster/templates/html/hurricane.html
+++ b/FlaPyDisaster/templates/html/hurricane.html
@@ -23,5 +23,7 @@
             <button type="submit">Run Function!</button>
         </div>
     </form>
+
+    <a href="{{ url_for('table_test') }}">Table Test</a>
 </body>
 </html>
