Adding hurdat track mapping and better hurricane file upload.

--- a/FlaPyDisaster/templates/html/hurricane_table_test.html
+++ b/FlaPyDisaster/templates/html/hurricane_table_test.html
@@ -14,5 +14,8 @@
         {{data | safe}}
         {% endblock %}
     </div>
+    <div>
+        <a href="{{ url_for('leaflet_redirect') }}">To Map</a>
+    </div>
 </body>
 </html>
