--- a/FlaPyDisaster/templates/html/hurricane.html
+++ b/FlaPyDisaster/templates/html/hurricane.html
@@ -6,19 +6,19 @@
     <title>Hurricane</title>
 </head>
 <body>
-    <form name="file_form" method="post" action="{{ url_for('hurricane_file_form') }}">
+    <form name="file_form" method="POST" action="{{ url_for('hurricane_file_form') }}" enctype = "multipart/form-data">
         <div>
             <h2>File Load</h2>
         </div>
         <div>
-            <input id="FileLoad" type="file" name="file_uri" />
+            <input id="FileLoad" type="file" name="hurdat_file" />
         </div>
         <div>
             <button type="submit">Load File</button>
         </div>
     </form>
     <br />
-    <form name="function_form" method="post" action="{{ url_for('hurricane_function_form') }}">
+    <form name="function_form" method="post"  action="{{ url_for('hurricane_function_form') }}">
         <div>
             <button type="submit">Run Function!</button>
         </div>
