--- a/FlaPyDisaster/templates/html/leaflet_test.html
+++ b/FlaPyDisaster/templates/html/leaflet_test.html
@@ -25,7 +25,8 @@
         <button type="button" onclick="geojson_points_test()">GeoJson Points Test</button>
         <button type="button" onclick="geojson_asteroid_points_test()">Asteroid Test</button>
         <button type="button" onclick="geojson_asteroid_points_test_style()">Asteroid Test Style</button>
+        <button type="button" onclick="geojson_hurdat_track()">Hurdat Track Test Style</button>
     </div>
-    <div id="mapid" style="height: 500px"></div>
+    <div id="mapid" style="height: 80vh"></div>
 </body>
 </html>
