--- a/FlaPyDisaster/templates/html/hurricane_table_test.html
+++ b/FlaPyDisaster/templates/html/hurricane_table_test.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <title>Hurricane Table Test</title>
+    <script type=text/javascript src="{{ url_for('hurricane_tables_js') }}"></script>
+    <script type=text/javascript src="../static/JQuery/jquery-3.0.0.js"></script>
+    <script type=text/javascript>
+        var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
 </head>
 <body>
     <h1>Table Test</h1>
     <div>
-        
+        <select id="table_selector" name="catalog_names" onchange="change_table('table_selector', 'track_table')">
+            {% for name in catalog_names %}
+            <option value="{{ name }}">{{ name }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div>
         {% block content %}
         <h1>{{name}}</h1>
         {{data | safe}}
