--- a/FlaPyDisaster/templates/html/leaflet_test.html
+++ b/FlaPyDisaster/templates/html/leaflet_test.html
@@ -26,6 +26,7 @@
         <button type="button" onclick="geojson_asteroid_points_test()">Asteroid Test</button>
         <button type="button" onclick="geojson_asteroid_points_test_style()">Asteroid Test Style</button>
         <button type="button" onclick="geojson_hurdat_track()">Hurdat Track Test Style</button>
+        <button type="button" onclick="geojson_hurdat_event()">Hurdat Event Test Style</button>
     </div>
     <div id="mapid" style="height: 80vh"></div>
 </body>
