small code analyze changes

--- a/FlaPyDisaster/templates/html/leaflet_test.html
+++ b/FlaPyDisaster/templates/html/leaflet_test.html
@@ -19,7 +19,7 @@
         <br />
         <button type="button" onclick="clear_map()">Clear map</button>
         <br />
-        <input type="checkbox" name="add_marker_CBX" id="add_marker_CBX" onclick="alert_state()"/><label for="add_marker">Add Marker</label>
+        <input type="checkbox" name="add_marker_CBX" id="add_marker_CBX" onclick="alert_state()"/><label for="add_marker_CBX">Add Marker</label>
         <br />
         <button type="button" onclick="geojson_test()">GeoJson Test</button>
         <button type="button" onclick="geojson_points_test()">GeoJson Points Test</button>
