--- a/FlaPyDisaster/templates/html/leaflet_test.html
+++ b/FlaPyDisaster/templates/html/leaflet_test.html
@@ -6,6 +6,7 @@
     <title>Leaflet Test</title>
     <link rel="stylesheet" href="../static/leaflet/leaflet.css" />
     <script type=text/javascript src="../static/leaflet/leaflet.js"></script>
+    <script type=text/javascript src="../static/leaflet/L.CanvasLayer.js"></script>
     <script type=text/javascript src="{{ url_for('leaflet_test_js') }}"></script>
     <script type=text/javascript src="../static/JQuery/jquery-3.0.0.js"></script>
     <script type=text/javascript>
@@ -26,7 +27,7 @@
         <button type="button" onclick="geojson_asteroid_points_test()">Asteroid Test</button>
         <button type="button" onclick="geojson_asteroid_points_test_style()">Asteroid Test Style</button>
         <button type="button" onclick="geojson_hurdat_track()">Hurdat Track Test Style</button>
-        <button type="button" onclick="geojson_hurdat_event()">Hurdat Event Test Style</button>
+        <button type="button" onclick="geojson_hurdat_event_heatmap()">Hurdat Event Test Style</button>
     </div>
     <div id="mapid" style="height: 80vh"></div>
 </body>
