raster updates and other continuations from last commit

--- a/FlaPyDisaster/templates/html/hurricane_table_test.html
+++ b/FlaPyDisaster/templates/html/hurricane_table_test.html
@@ -18,6 +18,7 @@
             <option value="{{ name }}">{{ name }}</option>
             {% endfor %}
         </select>
+        <button type="button" onclick="save_event_to_raster()">Save To Raster Button</button>
     </div>
     <div>
         {% block content %}
