--- a/FlaPyDisaster/templates/html/asteroid.html
+++ b/FlaPyDisaster/templates/html/asteroid.html
@@ -1,11 +1,5 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Asteroid</title>
-</head>
-<body>
+﻿{% extends "html/base.html" %}
+{% block content %}
     <h2>Asteroid</h2>
     <form name="input_params_form" method="post" action="{{ url_for('asteroid_input_params_form') }}">
         <div>
@@ -60,5 +54,4 @@
             <button type="submit">Test Function!</button>
         </div>
     </form>
-</body>
-</html>
+{% endblock  %}
