--- a/FlaPyDisaster/templates/html/base.html
+++ b/FlaPyDisaster/templates/html/base.html
@@ -9,13 +9,21 @@
         {% endif %}
 
         <meta charset="utf-8" />
+        <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <script type=text/javascript src="../static/JQuery/jquery-3.0.0.js"></script>
+        <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="../static/css/base.css">
     </head>
     <body>
-        <div>FlaPy Disaster:
-            <a href="{{ url_for('main_page') }}">Home</a>
-            <a href="{{ url_for('hurricane_page') }}">Hurricane</a>
-            <a href="{{ url_for('leaflet_redirect') }}">Leaflet</a>
-            <a href="{{ url_for('asteroid_page') }}">Asteroid</a>
+        <div class="nav">
+            <ul>
+                <li><h1>FlaPy Disaster<h1></li>
+                <li><a href="{{ url_for('main_page') }}">Home</a></li>
+                <li><a href="{{ url_for('hurricane_page') }}">Hurricane</a></li>
+                <li><a href="{{ url_for('leaflet_redirect') }}">Leaflet</a></li>
+                <li><a href="{{ url_for('asteroid_page') }}">Asteroid</a></li>
+            </ul>
         </div>
         {% block content %}{% endblock %}
     </body>
