--- a/FlaPyDisaster/templates/html/leaflet_test.html
+++ b/FlaPyDisaster/templates/html/leaflet_test.html
@@ -17,7 +17,32 @@
         <button type="button" onclick="hurdat_event_canvas()">Hurdat Event Test Style Canvas</button>
         <button type="button" onclick="hurdat_event_d3()">Hurdat Event Test Style D3</button>
     </div>
+
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog" data-keyboard="false" data-backdrop="static">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Some text in the modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <div id="mapid" style="height: 80vh"></div>
+
     <link rel="stylesheet" href="../static/leaflet/leaflet.css" />
     <script type=text/javascript src="../static/leaflet/leaflet.js"></script>
     <script type=text/javascript src="../static/leaflet/L.CanvasLayer.js"></script>
