--- a/FlaPyDisaster/templates/html/hurricane_table_test.html
+++ b/FlaPyDisaster/templates/html/hurricane_table_test.html
@@ -1,51 +1,68 @@
 ﻿{% extends "html/base.html" %}
 {% block content %}
     <h1>Table Test</h1>
+
+    <!-- Options and Selectors -->
     <div>
+        <!-- Combo Box -->
         <select id="table_selector" name="catalog_names" onchange="change_table('table_selector', 'track_table')">
             {% for name in catalog_names %}
             <option value="{{ name }}">{{ name }}</option>
             {% endfor %}
         </select>
+
         <button type="button" onclick="save_event_to_raster()">Save To Raster</button>
         <a href="{{ url_for('leaflet_redirect') }}">To Map</a>
-    </div>
-    <!-- Trigger the modal with a button -->
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Event Generation Settings</button>
-    <!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog" data-keyboard="false" data-backdrop="static">
-        <div class="modal-dialog">
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Event Footprint Settings</h4>
+        <!-- Trigger the modal with a button -->
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Event Generation Settings</button>
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog" data-keyboard="false" data-backdrop="static">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Event Footprint Settings</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                        <form id="event_settings" name="event_settings" method="post">
+                            <p>Pixels Per Degree</p>
+                            <input type="number" name="px_per_degree" value="10">
+                            <p>Raster Bands</p>
+                            <input type="number" name="raster_bands" value="1" max="4">
+                            <p>Type of Parallelism</p>
+                            <select name>
+                                <option value="single">Single Process</option>
+                                <option value="multi">Multi Process</option>
+                                <option value="gpu">GPU Processing</option>
+                            </select>
+                            <p>Type of Parallelism (if multi)</p>
+                            <input type="number" name="level_of_parallel" value="4">
+                            <p>Radius of Maximum Winds (nautical miles)</p>
+                            <input type="number" name="rmax_nmi" value="15">
+                            <p>Forward Speed</p>
+                            <div>
+                                <input type="number" name="level_of_parallel" value="4">
+                                <input type="checkbox" name="automatic_fspeed" value="false">
+                                <p style="display:inline">Calculate from position</p> <!-- Change this to style in css file-->
+                            </div>
+                            <br>
+                            <button type="button" onclick="set_event_settings()" class="btn btn-default" data-dismiss="modal">Submit Event Parameters</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                    <form>
-                        <p>Pixels Per Degree</p>
-                        <input type="number" name="px_per_degree" value="10">
-                        <p>Raster Bands</p>
-                        <input type="number" name="raster_bands" value="1" max="4">
-                        <p>Type of Parallelism</p>
-                        <select name>
-                            <option value="single">Single Process</option>
-                            <option value="multi">Multi Process</option>
-                            <option value="gpu">GPU Processing</option>
-                        </select>
-                        <p>Type of Parallelism (if multi)</p>
-                        <input type="number" name="level_of_parallel" value="4">
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+
             </div>
-
         </div>
     </div>
+
+    <!-- Table -->
     <div>
         <h1>{{name}}</h1>
         {{data | safe}}
